--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "mocha": "istanbul cover node_modules/mocha/bin/_mocha -- --require tests/helpers/test-setup.js --bail --recursive tests",
-    "eslint": "eslint -c node_modules/eslintrc/.eslintrc-es5 lib/index.js tests/helpers && eslint -c node_modules/eslintrc/.eslintrc-es5-mocha tests",
+    "eslint": "eslint -c node_modules/eslintrc/.eslintrc-es5 lib/index.js examples/ tests/helpers && eslint -c node_modules/eslintrc/.eslintrc-es5-mocha tests",
     "test": "npm run eslint && npm run mocha"
   },
   "repository": {
