--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "example": "examples"
   },
   "scripts": {
+    "build": "node scripts/generate-docs",
+    "start": "http-server . -c-0 -o",
     "mocha": "istanbul cover node_modules/mocha/bin/_mocha -- --require tests/helpers/test-setup.js --bail --recursive tests",
-    "eslint": "eslint -c node_modules/eslintrc/.eslintrc-es5 lib/index.js examples/ tests/helpers && eslint -c node_modules/eslintrc/.eslintrc-es5-mocha tests",
+    "eslint": "eslint -c node_modules/eslintrc/.eslintrc-es5 lib/index.js docs/ tests/helpers && eslint -c node_modules/eslintrc/.eslintrc-es5-mocha tests",
     "test": "npm run eslint && npm run mocha"
   },
   "repository": {
@@ -35,6 +37,7 @@
   "devDependencies": {
     "chai": "=3.5.0",
     "eslintrc": "git+https://github.com/JakeSidSmith/eslintrc.git#v0.0.1",
+    "http-server": "=0.9.0",
     "istanbul": "=1.0.0-alpha.2",
     "jsdom": "=8.4.1",
     "mocha": "=2.4.5",
