Test no coverage

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "node scripts/generate-docs",
     "start": "http-server . -c-0 -o",
     "mocha": "istanbul cover node_modules/mocha/bin/_mocha -- --require tests/helpers/test-setup.js --bail --recursive tests",
+    "mocha-no-coverage": "mocha --require tests/helpers/test-setup.js --bail --recursive tests",
     "eslint": "eslint -c node_modules/eslintrc/.eslintrc-es5 lib/index.js docs/ tests/helpers && eslint -c node_modules/eslintrc/.eslintrc-es5-mocha tests",
+    "test-no-coverage": "npm run eslint && npm run mocha-no-coverage",
     "test": "npm run eslint && npm run mocha"
   },
   "repository": {
