--- a/.istanbul.yml
+++ b/.istanbul.yml
@@ -4,5 +4,5 @@ instrumentation:
     extensions:
         - .js
     default-excludes: true
-    excludes: ['tests/helpers']
+    excludes: []
     include-all-sources: true
