--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "scripts": {
     "start": "http-server docs -c-0 -o",
-    "build": "scripts/generate-docs.js",
+    "build": "babel-node scripts/generate-docs.js",
     "mocha": "istanbul cover node_modules/mocha/bin/_mocha -- --require tests/helpers/test-setup.js --bail --recursive tests",
     "mocha-no-coverage": "mocha --require tests/helpers/test-setup.js --bail --recursive tests",
-    "eslint": "eslint -c node_modules/eslintrc/.eslintrc-es5 lib/index.js docs/ tests/helpers && eslint -c node_modules/eslintrc/.eslintrc-es5-mocha tests",
+    "eslint": "eslint -c node_modules/eslintrc/.eslintrc-es5-react lib/index.js docs/ tests/helpers && eslint -c node_modules/eslintrc/.eslintrc-es5-mocha tests",
     "test-no-coverage": "npm run eslint && npm run mocha-no-coverage",
     "test": "npm run eslint && npm run mocha"
   },
@@ -37,12 +37,17 @@
   },
   "homepage": "https://github.com/jakesidsmith/canvasimo#readme",
   "devDependencies": {
+    "babel-cli": "=6.11.4",
+    "babel-preset-react": "=6.11.1",
     "chai": "=3.5.0",
     "eslintrc": "git+https://github.com/JakeSidSmith/eslintrc.git#v0.0.1",
     "http-server": "=0.9.0",
     "istanbul": "=1.1.0-alpha.1",
     "jsdom": "=8.4.1",
+    "mkdirp": "=0.5.1",
     "mocha": "=2.4.5",
+    "react": "=15.3.0",
+    "react-dom": "=15.3.0",
     "sinon": "=1.17.3",
     "sinon-chai": "=2.8.0"
   },
