--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mocha": "=2.4.5",
     "react": "=15.3.0",
     "react-dom": "=15.3.0",
+    "rimraf": "=2.5.4",
     "sinon": "=1.17.3",
     "sinon-chai": "=2.8.0"
   },
