--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "http-server docs -c-0 -o",
     "build": "babel-node scripts/generate-docs.js",
+    "watch": "babel-node scripts/generate-docs.js watch",
     "mocha": "istanbul cover node_modules/mocha/bin/_mocha -- --require tests/helpers/test-setup.js --bail --recursive tests",
     "mocha-no-coverage": "mocha --require tests/helpers/test-setup.js --bail --recursive tests",
     "eslint": "eslint -c node_modules/eslintrc/.eslintrc-es5-react lib/index.js docs/ tests/helpers && eslint -c node_modules/eslintrc/.eslintrc-es5-mocha tests",
@@ -50,7 +51,8 @@
     "react-dom": "=15.3.0",
     "rimraf": "=2.5.4",
     "sinon": "=1.17.3",
-    "sinon-chai": "=2.8.0"
+    "sinon-chai": "=2.8.0",
+    "watch": "=0.19.1"
   },
   "engines": {
     "node": "6.2.2"
