--- a/package.json
+++ b/package.json
@@ -40,11 +40,14 @@
   "devDependencies": {
     "babel-cli": "=6.11.4",
     "babel-preset-react": "=6.11.1",
+    "babelify": "=7.3.0",
+    "browserify": "=13.1.0",
     "chai": "=3.5.0",
     "eslintrc": "git+https://github.com/JakeSidSmith/eslintrc.git#v0.0.1",
     "http-server": "=0.9.0",
     "istanbul": "=1.1.0-alpha.1",
     "jsdom": "=8.4.1",
+    "minifyify": "=7.3.3",
     "mkdirp": "=0.5.1",
     "mocha": "=2.4.5",
     "react": "=15.3.0",
