--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "watch": "babel-node scripts/generate-docs.js watch",
     "mocha": "istanbul cover node_modules/mocha/bin/_mocha -- --require tests/helpers/test-setup.js --bail --recursive tests",
     "mocha-no-coverage": "mocha --require tests/helpers/test-setup.js --bail --recursive tests",
-    "eslint": "eslint -c node_modules/eslintrc/.eslintrc-es5-react lib/index.js docs/ tests/helpers && eslint -c node_modules/eslintrc/.eslintrc-es5-mocha tests",
+    "eslint": "eslint -c node_modules/eslintrc/.eslintrc-es5-react lib/index.js docs/src/ tests/helpers && eslint -c node_modules/eslintrc/.eslintrc-es5-mocha tests",
     "test-no-coverage": "npm run eslint && npm run mocha-no-coverage",
     "test": "npm run eslint && npm run mocha"
   },
@@ -43,7 +43,7 @@
     "babelify": "=7.3.0",
     "browserify": "=13.1.0",
     "chai": "=3.5.0",
-    "eslintrc": "git+https://github.com/JakeSidSmith/eslintrc.git#v0.0.1",
+    "eslintrc": "git+https://github.com/JakeSidSmith/eslintrc.git#v0.0.2",
     "http-server": "=0.9.0",
     "istanbul": "=1.1.0-alpha.1",
     "jsdom": "=8.4.1",
