--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "rimraf": "=2.5.4",
     "sinon": "=1.17.3",
     "sinon-chai": "=2.8.0",
+    "underscore": "=1.8.3",
     "watch": "=0.19.1"
   },
   "engines": {
