Correct "A HTML" typo

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "canvasimo",
   "version": "0.5.1",
-  "description": "A HTML5 canvas drawing library, with 150+ useful methods, jQuery-like fluent interface, and cross-browser compatibility enhancements.",
+  "description": "An HTML5 canvas drawing library, with 150+ useful methods, jQuery-like fluent interface, and cross-browser compatibility enhancements.",
   "main": "lib/index.js",
   "directories": {
     "example": "examples"
