--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "canvasimo",
   "version": "0.5.3",
   "description": "An HTML5 canvas drawing library, with 150+ useful methods, jQuery-like fluent interface, and cross-browser compatibility enhancements.",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "directories": {
     "example": "examples"
   },
