--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "babelify": "=7.3.0",
     "browserify": "=13.1.0",
     "chai": "=3.5.0",
-    "eslintrc": "git+https://github.com/JakeSidSmith/eslintrc.git#v0.0.2",
+    "eslint-config-jakesidsmith": "github:jakesidsmith/eslint-config-jakesidsmith#v2.1.1",
     "http-server": "=0.9.0",
     "istanbul": "=1.1.0-alpha.1",
     "jsdom": "=8.4.1",
