--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "babelify": "=7.3.0",
     "browserify": "=13.1.0",
     "chai": "=3.5.0",
-    "eslint-config-jakesidsmith": "github:jakesidsmith/eslint-config-jakesidsmith#v2.1.1",
+    "eslint": "3.19.0",
+    "eslint-config-jakesidsmith": "github:jakesidsmith/eslint-config-jakesidsmith#v2.2.0",
     "http-server": "=0.9.0",
     "istanbul": "=1.1.0-alpha.1",
     "jsdom": "=8.4.1",
