--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-/node_modules/**
-/coverage/**
-/docs/build/**
-/.nyc_output/**
+/node_modules/*
+/coverage/*
+/docs/build/*
+/dist/*
+/.nyc_output/*
 
 .DS_Store
 npm-debug.log*
