--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     ],
     "testRegex": "(/tests/.*|\\.(test|spec))\\.(ts|tsx|js|jsx)$",
     "testPathIgnorePatterns": [
+      "tests/helpers/",
       "tests/mocks/"
     ],
     "moduleFileExtensions": [
