--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "canvasimo",
   "version": "0.6.0",
   "description": "An HTML5 canvas drawing library, with 150+ useful methods, jQuery-like fluent interface, and cross-browser compatibility enhancements.",
-  "main": "dist/index.js",
+  "main": "dist/bundle.js",
   "directories": {
     "example": "examples"
   },
   "scripts": {
     "start": "http-server docs -c-0 -o",
-    "dist": "rm -rf dist && mkdir -p dist && browserify -p [ tsify --project src/tsconfig.json ] --standalone canvasimo src/index.ts > dist/index.js",
+    "dist": "rm -rf dist && mkdir -p dist && tsc --project src && browserify --standalone canvasimo dist/index.js | derequire > dist/bundle.js",
     "build": "babel-node scripts/generate-docs.js",
     "watch": "babel-node scripts/generate-docs.js watch",
     "lint-js": "tslint --project tsconfig.json '@(src|tests|types|docs)/**/*.@(ts|tsx)'",
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@types/jest": "22.1.0",
     "browserify": "15.2.0",
+    "derequire": "2.0.6",
     "http-server": "=0.9.0",
     "jest": "22.1.4",
     "mkdirp": "=0.5.1",
