--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,3 +1,10 @@
 {
-  "extends": "../tsconfig.json"
+  "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "declaration": true,
+    "sourceMap": true,
+    "listFiles": true,
+    "rootDir": "./",
+    "outDir": "../dist/"
+  }
 }
