Convert docs to typescript

--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "example": "examples"
   },
   "scripts": {
-    "start": "http-server docs -c-0 -o",
     "dist": "./scripts/dist",
-    "build": "babel-node scripts/generate-docs.js",
-    "watch": "babel-node scripts/generate-docs.js watch",
+    "start": "./scripts/start",
+    "build": "ts-node scripts/generate-docs.tsx",
     "lint-js": "tslint --project tsconfig.json '@(src|tests|types|docs)/**/*.@(ts|tsx)'",
     "lint": "npm run lint-js",
     "tests": "jest",
@@ -42,23 +41,32 @@
     "typescript": ">= 2.3 < 3"
   },
   "devDependencies": {
+    "@types/browserify": "12.0.33",
+    "@types/chokidar": "1.7.4",
     "@types/jest": "22.1.0",
+    "@types/mkdirp": "0.5.2",
+    "@types/node": "9.4.0",
+    "@types/react": "16.0.36",
+    "@types/react-dom": "16.0.3",
+    "@types/rimraf": "2.0.2",
     "browserify": "15.2.0",
+    "chokidar": "2.0.0",
+    "concurrently": "3.5.1",
     "derequire": "2.0.6",
     "exorcist": "1.0.0",
-    "http-server": "=0.9.0",
+    "http-server": "0.9.0",
     "jest": "22.1.4",
-    "mkdirp": "=0.5.1",
-    "react": "=15.3.0",
-    "react-dom": "=15.3.0",
-    "rimraf": "=2.5.4",
+    "minifyify": "7.3.5",
+    "mkdirp": "0.5.1",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "rimraf": "2.5.4",
     "ts-jest": "22.0.1",
+    "ts-node": "4.1.0",
     "tsify": "3.0.4",
     "tslint": "5.9.1",
     "tslint-eslint-rules": "4.1.1",
-    "typescript": "2.3.4",
-    "underscore": "=1.8.3",
-    "watch": "=0.19.1"
+    "typescript": "2.3.4"
   },
   "jest": {
     "mapCoverage": true,
