--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "jest": "22.1.4",
     "minifyify": "7.3.5",
     "mkdirp": "0.5.1",
+    "raf": "3.4.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "rimraf": "2.5.4",
