--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint-js": "tslint --project tsconfig.json '@(src|tests|types|docs)/**/*.@(ts|tsx)'",
     "lint": "npm run lint-js",
     "tests": "jest",
-    "test": "npm run lint && npm run tests -- --coverage --runInBand"
+    "test": "npm run lint && npm run tests -- --coverage --runInBand && if grep -rn FIXME src; then exit 1; fi;"
   },
   "repository": {
     "type": "git",
