--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@types/browserify": "12.0.33",
     "@types/chokidar": "1.7.4",
+    "@types/glob": "5.0.35",
     "@types/jest": "22.1.0",
     "@types/mkdirp": "0.5.2",
     "@types/node": "9.4.0",
@@ -54,6 +55,7 @@
     "concurrently": "3.5.1",
     "derequire": "2.0.6",
     "exorcist": "1.0.0",
+    "glob": "7.1.2",
     "http-server": "0.9.0",
     "jest": "22.1.4",
     "minifyify": "7.3.5",
