--- a/package.json
+++ b/package.json
@@ -37,9 +37,7 @@
     "url": "https://github.com/jakesidsmith/canvasimo/issues"
   },
   "homepage": "https://github.com/jakesidsmith/canvasimo#readme",
-  "dependencies": {
-    "typescript": ">= 2.3 < 3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/browserify": "12.0.33",
     "@types/chokidar": "1.7.4",
