--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react": "16.0.36",
     "@types/react-dom": "16.0.3",
     "@types/rimraf": "2.0.2",
+    "brfs": "1.4.4",
     "browserify": "15.2.0",
     "chokidar": "2.0.0",
     "concurrently": "3.5.1",
