--- a/package.json
+++ b/package.json
@@ -40,37 +40,37 @@
   "homepage": "https://github.com/jakesidsmith/canvasimo#readme",
   "dependencies": {},
   "devDependencies": {
-    "@types/browserify": "12.0.33",
-    "@types/chokidar": "1.7.4",
-    "@types/glob": "5.0.35",
-    "@types/jest": "22.1.0",
-    "@types/mkdirp": "0.5.2",
-    "@types/node": "9.4.0",
-    "@types/react": "16.0.36",
-    "@types/react-dom": "16.0.3",
-    "@types/rimraf": "2.0.2",
-    "brfs": "1.4.4",
-    "browserify": "15.2.0",
-    "chokidar": "2.0.0",
-    "concurrently": "3.5.1",
-    "core-js": "2.5.3",
-    "derequire": "2.0.6",
-    "exorcist": "1.0.0",
-    "glob": "7.1.2",
-    "http-server": "0.9.0",
-    "jest": "22.1.4",
-    "minifyify": "7.3.5",
-    "mkdirp": "0.5.1",
-    "raf": "3.4.0",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "rimraf": "2.5.4",
-    "ts-jest": "22.0.1",
-    "ts-node": "4.1.0",
-    "tsify": "3.0.4",
-    "tslint": "5.9.1",
-    "tslint-eslint-rules": "4.1.1",
-    "typescript": "2.3.4"
+    "@types/browserify": "^12.0.33",
+    "@types/chokidar": "^1.7.4",
+    "@types/glob": "^5.0.35",
+    "@types/jest": "^22.1.0",
+    "@types/mkdirp": "^0.5.2",
+    "@types/node": "^9.4.0",
+    "@types/react": "^16.0.36",
+    "@types/react-dom": "^16.0.3",
+    "@types/rimraf": "^2.0.2",
+    "brfs": "^1.4.4",
+    "browserify": "^15.2.0",
+    "chokidar": "^2.0.0",
+    "concurrently": "^3.5.1",
+    "core-js": "^2.5.3",
+    "derequire": "^2.0.6",
+    "exorcist": "^1.0.0",
+    "glob": "^7.1.2",
+    "http-server": "^0.9.0",
+    "jest": "^22.1.4",
+    "minifyify": "^7.3.5",
+    "mkdirp": "^0.5.1",
+    "raf": "^3.4.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "rimraf": "^2.5.4",
+    "ts-jest": "^22.0.1",
+    "ts-node": "^4.1.0",
+    "tsify": "^3.0.4",
+    "tslint": "^5.9.1",
+    "tslint-eslint-rules": "^4.1.1",
+    "typescript": "^2.3.4"
   },
   "jest": {
     "collectCoverageFrom": [
