--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "example": "examples"
   },
   "scripts": {
-    "prepublish": "npm run dist",
+    "prepublishOnly": "npm run dist",
     "dist": "./scripts/dist",
     "start": "./scripts/start",
     "build": "NODE_ENV=production ts-node scripts/generate-docs.tsx",
