--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/browserify": "^12.0.33",
     "@types/chokidar": "^1.7.4",
     "@types/glob": "^5.0.35",
-    "@types/jest": "^22.1.0",
+    "@types/jest": "^23.3.5",
     "@types/mkdirp": "^0.5.2",
     "@types/node": "^9.4.0",
     "@types/react": "^16.0.36",
@@ -58,19 +58,19 @@
     "exorcist": "^1.0.0",
     "glob": "^7.1.2",
     "http-server": "^0.9.0",
-    "jest": "^22.1.4",
+    "jest": "^23.6.0",
     "minifyify": "^7.3.5",
     "mkdirp": "^0.5.1",
     "raf": "^3.4.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "rimraf": "^2.5.4",
-    "ts-jest": "^22.0.1",
+    "ts-jest": "^23.10.4",
     "ts-node": "^4.1.0",
     "tsify": "^3.0.4",
     "tslint": "^5.9.1",
     "tslint-eslint-rules": "^4.1.1",
-    "typescript": "^2.3.4"
+    "typescript": "^2.7.2"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -88,7 +88,7 @@
       "jsx"
     ],
     "transform": {
-      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      "^.+\\.tsx?$": "ts-jest"
     }
   }
 }
