--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,9 @@ jobs:
       - run:
           name: Dist
           command: npm run dist
+      - run:
+          name: Build docs
+          command: npm run build
       - store_artifacts:
           path: coverage
           prefix: coverage
