--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint-js": "tslint --project tsconfig.json '{docs/src,src,tests,types,scripts}/**/*.@(ts|tsx)'",
     "lint": "npm run lint-js",
     "tests": "jest",
-    "test": "npm run lint && npm run build && npm run tests -- --coverage --runInBand && if grep -rn FIXME src; then exit 1; fi;"
+    "test": "npm run lint && npm run tests -- --coverage --runInBand && if grep -rn FIXME src; then exit 1; fi;"
   },
   "repository": {
     "type": "git",
