--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "skipLibCheck": true,
     "pretty": true,
     "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "moduleResolution": "node",
     "jsx": "react",
     "target": "es5",
