--- a/package.json
+++ b/package.json
@@ -38,9 +38,7 @@
     "url": "https://github.com/jakesidsmith/canvasimo/issues"
   },
   "homepage": "https://github.com/jakesidsmith/canvasimo#readme",
-  "dependencies": {
-    "typescript": "^3.1.6"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/browserify": "^12.0.33",
     "@types/chokidar": "^1.7.4",
@@ -71,7 +69,8 @@
     "ts-node": "^4.1.0",
     "tsify": "^3.0.4",
     "tslint": "^5.9.1",
-    "tslint-eslint-rules": "^4.1.1"
+    "tslint-eslint-rules": "^4.1.1",
+    "typescript": "^3.1.6"
   },
   "jest": {
     "testURL": "http://localhost",
