Adjust tsconfigs and dist

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,14 @@
     "target": "es5",
     "module": "commonjs",
     "typeRoots": [
-      "node_modules/@types/",
-      "types/"
+      "./node_modules/@types/",
+      "./@types/"
     ]
-  }
+  },
+  "include": [
+    "./src/",
+    "./@types/",
+    "./docs/src/",
+    "./tests/"
+  ]
 }
