--- a/.npmignore
+++ b/.npmignore
@@ -1,2 +1,11 @@
-!/dist/*
+/node_modules/*
+/coverage/*
+/docs/build/*
 !/build/*
+!/dist/*
+/.nyc_output/*
+
+.DS_Store
+npm-debug.log*
+
+/docs/index.html
