--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,9 @@
 /node_modules/*
 /coverage/*
-/docs/build/*
+/docs/*
 !/build/*
 !/dist/*
 /.nyc_output/*
 
 .DS_Store
 npm-debug.log*
-
-/docs/index.html
